last call, base code I know I should have

--- a/templates/index.html
+++ b/templates/index.html
@@ -10,32 +10,33 @@
       href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"
     />
   </head>
-  <body>
+  <!--Changed background color and text color for Deliverable 3 update-->
+  <body style="background-color: black">
     <div class="container">
-      <!-- Add Jumbotron to Header -->
-      <div class="jumbotron text-center">
+      <!-- Add Jumbotron to Header (and changing image in Jumbotron for Deliverable 3)-->
+      <div class="jumbotron text-center", style = "background-image: url(https://marshemispheres.com/images/full.jpg);">
         <h1>Mission to Mars</h1>
-        <!-- Add a button to activate scraping script -->
-        <p><a class="btn btn-primary btn-lg" href="/scrape" role="button">Scrape New Data</a></p>
+        <!-- Add a button to activate scraping script )-->
+        <p style="color:white"><a class="btn btn-primary btn-lg" href="/scrape" role="button">Scrape New Data</a></p>
       </div>
 
-      <!-- Add section for Mars News -->
+      <!-- Add section for Mars News (changing text color for Deliverbale 3)-->
       <div class="row" id="mars-news">
         <div class="col-md-12">
           <div class="media">
             <div class="media-body">
-              <h2>Latest Mars News</h2>
-              <h4 class="media-heading">{{ mars.news_title }}</h4>
-              <p>{{ mars.news_paragraph }}</p>
+              <h2 style="color:white">Latest Mars News</h2>
+              <h4 style="color:white", class="media-heading">{{ mars.news_title }}</h4>
+              <p style="color:white">{{ mars.news_paragraph }}</p>
             </div>
           </div>
         </div>
       </div>
 
-      <!-- Section for Featured Image and Facts table -->
+      <!-- Section for Featured Image and Facts table (changed text color for Deliverable 3)-->
       <div class="row" id="mars-featured-image">
         <div class="col-md-8">
-          <h2>Featured Mars Image</h2>
+          <h2 style="color:white">Featured Mars Image</h2>
 
           <!-- if images is False/None/non-existent, then default to error message -->
           <img
@@ -45,25 +46,26 @@
           />
         </div>
 
-        <div class="col-md-4">
+        <!-- Customized Mars facts table for Deliverable 3-->
+        <div class="col-md-2">
           <!-- Mars Facts -->
-          <div class="row" id="mars-facts">
-            <h4>Mars Facts</h4>
+          <div style="color:darkgrey", class="row" id="mars-facts">
+            <h4 style="color:white">Mars Facts</h4>
             {{ mars.facts | safe }}
           </div>
         </div>
       </div>
 
-      <!-- Section for Mars Hemispheres -->
+      <!-- Section for Mars Hemispheres (Changed text color for Deliverbale 3)-->
       <div class="row" id="mars-hemispheres">
         <div class="page-header">
-          <h2 class="text-center">Mars Hemispheres</h2>
+          <h2 style="color:white", class="text-center">Mars Hemispheres</h2>
         </div>
 
         {% for hemisphere in mars.hemispheres %}
         <div class="col-md-6">
           <div class="thumbnail">
-            <img src="{{hemisphere.img_url | default('static/images/error.png', true)}}" alt="...">
+            <img src="{{hemisphere.img_url | default('static/images/error.png', true)}}" alt="..." >
             <div class="caption">
               <h3>{{hemisphere.title}}</h3>
             </div>
